# conditional-launcher

./: .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  build.rs  install.sh
.github/workflows/: release.yml
src/: app.rs  config.rs  daemon.rs  gui.rs  main.rs
src/gui/: mod.rs  ui.slint
src/os/: linux.rs  macos.rs  mod.rs  windows.rs
