[package]
name = "conditional-launcher"
version = "0.1.1"
edition = "2024"

[dependencies]
dirs = "6.0.0"
eframe = "0.32.1"
egui = "0.32.1"
freedesktop-desktop-entry = "0.7.14"
freedesktop-icons = "0.4.0"
image = { version = "0.25.6", features = ["png", "jpeg"] }
libc = "0.2.175"
notify-rust = "4.11.7"
resvg = "0.45.1"
serde = { version = "1.0.219", features = ["derive"] }
sysinfo = "0.37.0"
toml = "0.9.5"
usvg = "0.45.1"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
